Created: 4/11/25
Archived:

Added infoboxes for upgrades
Put all upgrade info into infoboxes
Reworked UI layout
Added settings (limited access)
Added font and resolution settings
Added in game way to change resolution
Added quit button