@@ -6,3 +6,4 @@ buttonGroupList = listClass.list()
 currencyList = listClass.list()
 objectList = listClass.list()
 infoboxList = listClass.list()
+upgradeList = listClass.list()
