@@ -1,0 +1,1 @@
+[[{"amount": 661, "gainPerSecond": 24, "costToGen": 0}, {"amount": 998.21, "gainPerSecond": 0.04, "costToGen": 30}], [{"cost": 10, "level": 1, "increaseGenPerSecondAmount": 0.01, "increaseCostPerGenAmount": 10}, {"cost": 0.09, "level": 3, "increaseGenPerSecondAmount": 8, "increaseCostPerGenAmount": null}, {"cost": 51.45, "level": 2, "increaseGenPerSecondAmount": 2, "increaseCostPerGenAmount": 10}, {"cost": 0.5, "level": 3, "amountIncrease": 2}]]
